--- a/01-Android/app/src/main/AndroidManifest.xml
+++ b/01-Android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MovilesComp2023A"
         tools:targetApi="31">
         <activity
+            android:name=".BListView"
+            android:exported="false" />
+        <activity
             android:name=".AACicloVida"
             android:exported="false"
             android:label="@string/title_activity_aaciclo_vida"
