--- a/01-Android_v2/app/src/main/AndroidManifest.xml
+++ b/01-Android_v2/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.MovilesComputacion2023A"
         tools:targetApi="31">
         <activity
+            android:name=".CIntentExplicitoParametros"
+            android:exported="false" />
+        <activity
             android:name=".BListView"
             android:exported="false" />
         <activity
