--- a/01-Android_v2/app/src/main/AndroidManifest.xml
+++ b/01-Android_v2/app/src/main/AndroidManifest.xml
@@ -14,13 +14,20 @@
         android:theme="@style/Theme.MovilesComputacion2023A"
         tools:targetApi="31">
         <activity
+            android:name=".ECrudEntrenador"
+            android:exported="false" />
+        <activity
             android:name=".CIntentExplicitoParametros"
             android:exported="false" />
-            <intent-filter>
-                <action android:name="android.intent.action.SEND" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <data android:mimeType="text/plain" />
-            </intent-filter>
+
+        <intent-filter>
+            <action android:name="android.intent.action.SEND" />
+
+            <category android:name="android.intent.category.DEFAULT" />
+
+            <data android:mimeType="text/plain" />
+        </intent-filter>
+
         <activity
             android:name=".BListView"
             android:exported="false" />
