--- a/Examenes/Examen_IB/app/src/main/AndroidManifest.xml
+++ b/Examenes/Examen_IB/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
             android:name=".CrearPanaderia"
             android:exported="false" />
         <activity
+            android:name=".HomePanaderias"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
