--- a/Examenes/Examen_IB/app/src/main/AndroidManifest.xml
+++ b/Examenes/Examen_IB/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Examen_IB"
         tools:targetApi="31">
         <activity
+            android:name=".EditarPanaderia"
+            android:exported="false" />
+        <activity
             android:name=".CrearPanaderia"
             android:exported="true" />
         <activity
