--- a/01-Android_v3/app/build.gradle
+++ b/01-Android_v3/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
@@ -36,6 +37,15 @@ android {
 }
 
 dependencies {
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
+    // Librearia de Autenticacion
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
+    // UI libreria auth
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+    // Firestore
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -47,4 +57,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
 }
