--- a/01-Android_v4/app/src/main/AndroidManifest.xml
+++ b/01-Android_v4/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.MovilesComputacion2023A"
         tools:targetApi="31">
         <activity
+            android:name=".JCities"
+            android:exported="false" />
+        <activity
             android:name=".IFirestore"
             android:exported="false" />
         <activity
