--- a/Deberes/Deber03 - Voicemod/app/src/main/AndroidManifest.xml
+++ b/Deberes/Deber03 - Voicemod/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Voicemod"
         tools:targetApi="31">
         <activity
+            android:name=".Configuracion"
+            android:exported="false" />
+        <activity
             android:name=".MenuLayoutActivity"
             android:exported="false" />
         <activity
