--- a/01-Android_v5/app/src/main/AndroidManifest.xml
+++ b/01-Android_v5/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.movilescomputacion2023a">
+    package="com.example.movilescomp2023a">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -17,13 +17,13 @@
         android:theme="@style/Theme.MovilesComputacion2023A"
         tools:targetApi="31">
         <activity
-            android:name=".IFirestore"
+            android:name="com.example.movilescomp2023a.IFirestore"
             android:exported="false" />
         <activity
-            android:name=".HFirebaseUIAuth"
+            android:name="com.example.movilescomp2023a.HFirebaseUIAuth"
             android:exported="false" />
         <activity
-            android:name=".GGoogleMapsActivity"
+            android:name="com.example.movilescomp2023a.GGoogleMapsActivity"
             android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
@@ -41,14 +41,14 @@
             android:value="AIzaSyCZnHvMtkadW64vde1xUHNfG2xWw6awITs" />
 
         <activity
-            android:name=".GoogleMapsInicio"
+            android:name="com.example.movilescomp2023a.GoogleMapsInicio"
             android:exported="false"
             android:label="@string/title_activity_google_maps_inicio" />
         <activity
-            android:name=".FRecyclerView"
+            android:name="com.example.movilescomp2023a.FRecyclerView"
             android:exported="false" />
         <activity
-            android:name=".CIntentExplicitoParametros"
+            android:name="com.example.movilescomp2023a.CIntentExplicitoParametros"
             android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
@@ -59,21 +59,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".BListView"
+            android:name="com.example.movilescomp2023a.BListView"
             android:exported="false" />
         <activity
-            android:name=".ECrudEntrenador"
+            android:name="com.example.movilescomp2023a.ECrudEntrenador"
             android:exported="false" />
         <activity
-            android:name=".AACicloVida"
+            android:name="com.example.movilescomp2023a.AACicloVida"
             android:exported="false"
             android:label="@string/title_activity_aaciclo_vida"
             android:theme="@style/Theme.MovilesComputacion2023A.NoActionBar" />
         <activity
-            android:name=".ACicloVida"
+            android:name="com.example.movilescomp2023a.ACicloVida"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.movilescomp2023a.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
