--- a/01-Android_v5/app/build.gradle
+++ b/01-Android_v5/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.movilescomputacion2023a"
+        applicationId "com.example.movilescomp2023a"
         minSdk 24
         targetSdk 32
         versionCode 1
