--- a/Examenes/Examen_IIB/app/build.gradle
+++ b/Examenes/Examen_IIB/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -34,10 +36,18 @@ android {
 
 dependencies {
 
+    //Firebase
+    implementation platform('com.google.firebase:firebase-bom:30.2.0')
+    // Libreria autenticacion
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    //UI libreria auth
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
