--- a/Examenes/Examen_IIB/settings.gradle
+++ b/Examenes/Examen_IIB/settings.gradle
@@ -10,7 +10,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        jcenter() // Warning: this repository is going to shut down soon
     }
 }
-rootProject.name = "Examen_IB"
+rootProject.name = "Examen_IIB"
 include ':app'
